--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="apple-touch-icon" sizes="57x57" href="assets/favicon/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="assets/favicon/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="assets/favicon/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="assets/favicon/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="assets/favicon/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="assets/favicon/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="assets/favicon/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="assets/favicon/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="assets/favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+  <link rel="manifest" href="assets/favicon/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="assets/favicon/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
+
   <title>Сергей Головкин</title>
   <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
@@ -25,57 +43,9 @@
 
         <ul id="nav">
 
-          <li class="slidedown">
-            <a href="#">Home</a>
-            <ul>
-              <li><a href="index.html">Light header</a></li>
-              <li><a href="index-2.html">Dark header</a></li>
-              <li><a href="index-3.html">Film overlay</a></li>
-              <li><a href="index-4.html">Image Slider</a></li>
-              <li><a href="index-5.html">Youtube Video</a></li>
-              <li><a href="index-6.html">Text rotator</a></li>
-              <li><a href="index-7.html">Agency</a></li>
-            </ul>
-          </li>
-
-          <li><a href="about.html">About</a></li>
-
-          <li class="slidedown">
-            <a href="#">Portfolio</a>
-            <ul>
-              <li><a href="portfolio-single-1.html">Single 1 - standartd</a></li>
-              <li><a href="portfolio-single-2.html">Single 2 - gallery</a></li>
-              <li><a href="portfolio-single-3.html">Single 3 - full height</a></li>
-              <li><a href="portfolio-single-4.html">Single 4 - Slider</a></li>
-              <li><a href="portfolio-single-5.html">Single 5 - Youtube header</a></li>
-              <li><a href="portfolio-single-6.html">Single 6 with slider</a></li>
-              <li><a href="portfolio-single-7.html">Single 7 with Youtube</a></li>
-              <li><a href="portfolio-single-8.html">Single 8 with Vimeo</a></li>
-            </ul>
-          </li>
-
-          <li class="slidedown">
-            <a href="#">News</a>
-            <ul>
-              <li><a href="blog-grid.html">3 column grid</a></li>
-              <li><a href="blog-grid-2.html">2 column grid</a></li>
-              <li><a href="blog-masonry.html">Blog Masonry</a></li>
-              <li><a href="blog-single.html">Single post</a></li>
-            </ul>
-          </li>
-
-          <li class="slidedown">
-            <a href="#">Features</a>
-            <ul>
-              <li><a href="components-1.html">Buttons, Content box, Progress bars</a></li>
-              <li><a href="components-2.html">Tab & Accordian</a></li>
-              <li><a href="components-3.html">Pricing tables</a></li>
-              <li><a href="components-4.html">Typography & Columns</a></li>
-              <li><a href="components-5.html">Modules & Overlays</a></li>
-            </ul>
-          </li>
-
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="<%= root_path %>" title="Главная">Главная</a></li>
+          <li><a href="<%= about_path %>" title="О себе">О себе</a></li>
+          <li><a href="<%= contacts_path %>" title="Контакты">Контакты</a></li>
 
         </ul>
 
@@ -111,7 +81,7 @@
 
         <div class="navbar-header">
           <!-- YOU LOGO HERE -->
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="<%= root_path %>">
             <!-- IMAGE OR SIMPLE TEXT -->
             <img src="/assets/logo-g-dark.png" width="120" alt="">
           </a>
@@ -130,9 +100,9 @@
         <!-- /ICONS NAVBAR -->
 
         <ul class="extra-navbar nav navbar-nav navbar-right">
-          <li><a href="index.html" title="Home">Главная</a></li>
-          <li><a href="about.html" title="About">Про меня</a></li>
-          <li><a href="contact.html" title="Contact">Контакты</a></li>
+          <li><a href="<%= root_path %>" title="Главная">Главная</a></li>
+          <li><a href="<%= about_path %>" title="О себе">О себе</a></li>
+          <li><a href="<%= contacts_path %>" title="Контакты">Контакты</a></li>
         </ul>
 
       </div>
@@ -140,24 +110,7 @@
     </nav>
     <!-- /NAVIGATION -->
 
-    <!-- HERO -->
-    <section id="hero" class="module-hero module-parallax module-full-height bg-light-30" data-background="/assets/bg/surfwave.jpg">
-
-      <!-- HERO TEXT -->
-      <div class="hero-caption">
-        <div class="hero-text">
-
-          <h1 class="mh-line-size-1 font-alt m-b-50">Сергей Головкин</h1>
-          <h5 class="mh-line-size-4 font-alt">профессиональный разработчик</h5>
-
-        </div>
-      </div>
-      <!-- /HERO TEXT -->
-
-    </section>
-    <!-- /HERO -->
-
-  <%= yield %>
+    <%= yield %>
 
     <!-- FOOTER -->
     <footer class="module bg-light">
@@ -169,11 +122,9 @@
           <div class="col-sm-12">
 
             <ul class="social-text-links font-alt text-center m-b-20">
-              <li><a href="#">Facebook</a></li>
-              <li><a href="#">Google plus</a></li>
-              <li><a href="#">Twitter</a></li>
-              <li><a href="#">Linkedin</a></li>
-              <li><a href="#">Dribbble</a></li>
+              <li><%= link_to 'Facebook', 'http://facebook.com/kefiriaus', target: '_blank' %></li>
+              <li><%= link_to 'Linkedin', 'https://www.linkedin.com/pub/%D1%81%D0%B5%D1%80%D0%B3%D0%B5%D0%B9-%D0%B3%D0%BE%D0%BB%D0%BE%D0%B2%D0%BA%D0%B8%D0%BD/37/962/6a4', target: '_blank' %></li>
+              <li><%= link_to 'Headhunter', 'http://hh.ru/resume/949e4ad8ff00255a6a0039ed1f736563726574', target: '_blank' %></li>
             </ul>
 
           </div>
