--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,5 +1,7 @@
 <!-- HERO -->
-<section id="hero" class="module-hero module-parallax module-full-height bg-light-30" data-background="assets/bg/surfgirl_1920.jpg">
+<section id="hero"
+         class="module-hero module-parallax module-full-height bg-light-30"
+         data-background="<%= image_path 'bg/surfgirl_1920.jpg' %>">
 
   <!-- HERO TEXT -->
   <div class="hero-caption">
