--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,7 @@
 <!-- HERO -->
-<section id="hero" class="module-hero module-parallax module-full-height bg-light-30" data-background="/assets/bg/surfwave_1920.jpg">
+<section id="hero"
+         class="module-hero module-parallax module-full-height bg-light-30"
+         data-background="<%= image_path 'bg/surfwave_1920.jpg' %>">
 
   <!-- HERO TEXT -->
   <div class="hero-caption">
@@ -15,7 +17,7 @@
         <%= link_to 'skype:kefiriaus?chat' do %>
             <i class="fa fa-skype bounceIn animated a-d-15 l-s-n"></i>
         <%end%>
-        <%= link_to 'http://facebook.com/kefiriaus', target: '_blank' do %>
+        <%= link_to 'https://facebook.com/kefiriaus', target: '_blank' do %>
             <i class="fa fa-facebook-official bounceIn animated a-d-18 l-s-n"></i>
         <%end%></h5>
 
