--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="apple-touch-icon" sizes="57x57" href="assets/favicon/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="assets/favicon/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="assets/favicon/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="assets/favicon/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="assets/favicon/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="assets/favicon/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="assets/favicon/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="assets/favicon/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="assets/favicon/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-  <link rel="manifest" href="assets/favicon/manifest.json">
+  <%= favicon_link_tag 'favicon/apple-icon-57x57', rel:'apple-touch-icon', sizes: '57x57' %>
+  <%= favicon_link_tag 'favicon/apple-icon-60x60', rel:'apple-touch-icon', sizes: '60x60' %>
+  <%= favicon_link_tag 'favicon/apple-icon-72x72', rel:'apple-touch-icon', sizes: '72x72' %>
+  <%= favicon_link_tag 'favicon/apple-icon-76x76', rel:'apple-touch-icon', sizes: '76x76' %>
+  <%= favicon_link_tag 'favicon/apple-icon-114x114', rel:'apple-touch-icon', sizes: '114x114' %>
+  <%= favicon_link_tag 'favicon/apple-icon-120x120', rel:'apple-touch-icon', sizes: '120x120' %>
+  <%= favicon_link_tag 'favicon/apple-icon-144x144', rel:'apple-touch-icon', sizes: '144x144' %>
+  <%= favicon_link_tag 'favicon/apple-icon-152x152', rel:'apple-touch-icon', sizes: '152x152' %>
+  <%= favicon_link_tag 'favicon/apple-icon-180x180', rel:'apple-touch-icon', sizes: '180x180' %>
+  <%= favicon_link_tag 'favicon/android-icon-192x192', rel:'icon', sizes: '192x192', type: 'image/png' %>
+  <%= favicon_link_tag 'favicon/favicon-32x32', rel:'icon', sizes: '32x32', type: 'image/png' %>
+  <%= favicon_link_tag 'favicon/favicon-96x96', rel:'icon', sizes: '96x96', type: 'image/png' %>
+  <%= favicon_link_tag 'favicon/favicon-16x16', rel:'icon', sizes: '16x16', type: 'image/png' %>
+  <%= favicon_link_tag 'favicon/manifest.json', rel:'manifest' %>
+
+
   <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="assets/favicon/ms-icon-144x144.png">
+  <meta name="msapplication-TileImage" content="<%= image_path 'favicon/ms-icon-144x144.png' %>">
   <meta name="theme-color" content="#ffffff">
 
   <title>Сергей Головкин</title>
-  <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+  <script src="https://maps.google.com/maps/api/js?sensor=true"></script>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -81,10 +83,10 @@
 
         <div class="navbar-header">
           <!-- YOU LOGO HERE -->
-          <a class="navbar-brand" href="<%= root_path %>">
-            <!-- IMAGE OR SIMPLE TEXT -->
-            <img src="/assets/logo-g-dark.png" width="120" alt="">
-          </a>
+          <%= link_to root_path, class: 'navbar-brand' do %>
+              <!-- IMAGE OR SIMPLE TEXT -->
+              <%= image_tag 'logo-g-dark', width: 120 %>
+          <% end %>
         </div>
 
         <!-- ICONS NAVBAR -->
