Fix image urls ext + production config

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -35,7 +35,7 @@
         <div class="content-box pull-left m-t-0">
           <h4 class="font-alt m-t-0 m-b-20">О себе</h4>
 
-          <%= image_tag 'me', width: '100', class: 'img-rounded fa pull-left d-block' %>
+          <%= image_tag 'me.jpg', width: '100', class: 'img-rounded fa pull-left d-block' %>
           <p><strong>Привет</strong>! Меня зовут <strong>Сергей</strong> и я <strong>программист</strong>!
             Разработчик с более чем десяти летним стажем, обширным опытом решения задач любой сложности.
             Помогу Вашему проекту стать лучше. <i class="fa fa-thumbs-o-up"></i></p>
