--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <%= favicon_link_tag 'favicon/apple-icon-57x57', rel:'apple-touch-icon', sizes: '57x57' %>
-  <%= favicon_link_tag 'favicon/apple-icon-60x60', rel:'apple-touch-icon', sizes: '60x60' %>
-  <%= favicon_link_tag 'favicon/apple-icon-72x72', rel:'apple-touch-icon', sizes: '72x72' %>
-  <%= favicon_link_tag 'favicon/apple-icon-76x76', rel:'apple-touch-icon', sizes: '76x76' %>
-  <%= favicon_link_tag 'favicon/apple-icon-114x114', rel:'apple-touch-icon', sizes: '114x114' %>
-  <%= favicon_link_tag 'favicon/apple-icon-120x120', rel:'apple-touch-icon', sizes: '120x120' %>
-  <%= favicon_link_tag 'favicon/apple-icon-144x144', rel:'apple-touch-icon', sizes: '144x144' %>
-  <%= favicon_link_tag 'favicon/apple-icon-152x152', rel:'apple-touch-icon', sizes: '152x152' %>
-  <%= favicon_link_tag 'favicon/apple-icon-180x180', rel:'apple-touch-icon', sizes: '180x180' %>
-  <%= favicon_link_tag 'favicon/android-icon-192x192', rel:'icon', sizes: '192x192', type: 'image/png' %>
-  <%= favicon_link_tag 'favicon/favicon-32x32', rel:'icon', sizes: '32x32', type: 'image/png' %>
-  <%= favicon_link_tag 'favicon/favicon-96x96', rel:'icon', sizes: '96x96', type: 'image/png' %>
-  <%= favicon_link_tag 'favicon/favicon-16x16', rel:'icon', sizes: '16x16', type: 'image/png' %>
+  <%= favicon_link_tag 'favicon/apple-icon-57x57.png', rel:'apple-touch-icon', sizes: '57x57' %>
+  <%= favicon_link_tag 'favicon/apple-icon-60x60.png', rel:'apple-touch-icon', sizes: '60x60' %>
+  <%= favicon_link_tag 'favicon/apple-icon-72x72.png', rel:'apple-touch-icon', sizes: '72x72' %>
+  <%= favicon_link_tag 'favicon/apple-icon-76x76.png', rel:'apple-touch-icon', sizes: '76x76' %>
+  <%= favicon_link_tag 'favicon/apple-icon-114x114.png', rel:'apple-touch-icon', sizes: '114x114' %>
+  <%= favicon_link_tag 'favicon/apple-icon-120x120.png', rel:'apple-touch-icon', sizes: '120x120' %>
+  <%= favicon_link_tag 'favicon/apple-icon-144x144.png', rel:'apple-touch-icon', sizes: '144x144' %>
+  <%= favicon_link_tag 'favicon/apple-icon-152x152.png', rel:'apple-touch-icon', sizes: '152x152' %>
+  <%= favicon_link_tag 'favicon/apple-icon-180x180.png', rel:'apple-touch-icon', sizes: '180x180' %>
+  <%= favicon_link_tag 'favicon/android-icon-192x192.png', rel:'icon', sizes: '192x192', type: 'image/png' %>
+  <%= favicon_link_tag 'favicon/favicon-32x32.png', rel:'icon', sizes: '32x32', type: 'image/png' %>
+  <%= favicon_link_tag 'favicon/favicon-96x96.png', rel:'icon', sizes: '96x96', type: 'image/png' %>
+  <%= favicon_link_tag 'favicon/favicon-16x16.png', rel:'icon', sizes: '16x16', type: 'image/png' %>
   <%= favicon_link_tag 'favicon/manifest.json', rel:'manifest' %>
 
 
@@ -85,7 +85,7 @@
           <!-- YOU LOGO HERE -->
           <%= link_to root_path, class: 'navbar-brand' do %>
               <!-- IMAGE OR SIMPLE TEXT -->
-              <%= image_tag 'logo-g-dark', width: 120 %>
+              <%= image_tag 'logo-g-dark.png', width: 120 %>
           <% end %>
         </div>
 
