--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
   <meta name="theme-color" content="#ffffff">
 
   <title>Сергей Головкин</title>
-  <script src="//maps.google.com/maps/api/js?sensor=true"></script>
+  <% #<script src="//maps.google.com/maps/api/js?sensor=true"></script> %>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
