--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>Сергей Головкин</title>
+
   <%= favicon_link_tag 'favicon/apple-icon-57x57.png', rel:'apple-touch-icon', sizes: '57x57' %>
   <%= favicon_link_tag 'favicon/apple-icon-60x60.png', rel:'apple-touch-icon', sizes: '60x60' %>
   <%= favicon_link_tag 'favicon/apple-icon-72x72.png', rel:'apple-touch-icon', sizes: '72x72' %>
@@ -21,7 +28,6 @@
   <meta name="msapplication-TileImage" content="<%= image_path 'favicon/ms-icon-144x144.png' %>">
   <meta name="theme-color" content="#ffffff">
 
-  <title>Сергей Головкин</title>
   <% #<script src="//maps.google.com/maps/api/js?sensor=true"></script> %>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
