--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -36,8 +36,8 @@
           <h4 class="font-alt m-t-0 m-b-20">О себе</h4>
 
           <%= image_tag 'me.jpg', width: '100', class: 'img-rounded fa pull-left d-block' %>
-          <p><strong>Привет</strong>! Меня зовут <strong>Сергей</strong> и я <strong>программист</strong>!
-            Разработчик с более чем десяти летним стажем, обширным опытом решения задач любой сложности.
+          <p><strong>Привет</strong>! Меня зовут <strong>Сергей</strong> и я <strong>программист</strong>,
+            разработчик с более чем десятилетним стажем, обширным опытом решения задач любой сложности.
             Помогу Вашему проекту стать лучше. <i class="fa fa-thumbs-o-up"></i></p>
         </div>
       </div>
@@ -213,7 +213,7 @@
           </div>
           <h5 class="content-box-title font-alt">Интеграция</h5>
           <div class="content-box-text">
-            Интеграция с любыми системами, любой сложности, SAP, Oracle, MS SQL и т.д.,
+            Интеграция с любыми системами, любой сложности (SAP, Oracle, MS SQL и т.д.)
             как по предоставленной Вами, так и самостоятельно разработанной схеме взаимодействия.
           </div>
         </div>
@@ -243,8 +243,8 @@
           </div>
           <h5 class="content-box-title font-alt">Модули & плагины</h5>
           <div class="content-box-text">
-            Разработка индивидуальных модулей, для внедрения в проекты Ваших партнеров.
-            А также вынесения бизнес-логики в отдельные плагины, для удобства ведения Вашего проекта.
+            Разработка индивидуальных модулей для внедрения в проекты Ваших партнеров.
+            А также вынесения бизнес-логики в отдельные плагины для удобства ведения Вашего проекта.
           </div>
         </div>
       </div>
@@ -258,7 +258,7 @@
           </div>
           <h5 class="content-box-title font-alt">Оптимизация</h5>
           <div class="content-box-text">
-            Анализ, рефакторинг кода и оптимизация бизнес-логики Вашего проекта,
+            Анализ, рефакторинг кода и оптимизация бизнес-логики Вашего проекта
             для максимального ускорения всех систем и механизмов Вашего продукта.
           </div>
         </div>
