--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -37,7 +37,7 @@
     <div class="row">
       <div class="col-sm-6 col-sm-offset-3">
         <h2 class="module-title font-alt">Оставайтесь на связи</h2>
-        <div class="module-subtitle font-serif">Свяжитесь со мной любым удобным способом и вместе мы сделаем Ваш проект лучше.</div>
+        <div class="module-subtitle font-serif">Свяжитесь со мной любым удобным способом, и вместе мы сделаем Ваш проект лучше.</div>
       </div>
     </div>
 
