Fix mail config + add mailgun config settings

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -36,7 +36,7 @@
           <h4 class="font-alt m-t-0 m-b-20">О себе</h4>
 
           <%= image_tag 'me.jpg', width: '100', class: 'img-rounded fa pull-left d-block' %>
-          <p><strong>Привет</strong>! Меня зовут <strong>Сергей</strong> и я <strong>программист</strong>,
+          <p><strong>Привет</strong> <i class="fa fa-smile-o"></i> Меня зовут <strong>Сергей</strong> и я <strong>программист</strong>,
             разработчик с более чем десятилетним стажем, обширным опытом решения задач любой сложности.
             Помогу Вашему проекту стать лучше. <i class="fa fa-thumbs-o-up"></i></p>
         </div>
