Add facebook og meta tags

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,11 +9,15 @@
       'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
   })(window,document,'script','dataLayer','GTM-T9RH6L');</script>
   <!-- End Google Tag Manager -->
-
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
+  <meta name="description" content="Профессиональное проектирование, интеграция, разработка и внедрение Вашего проекта любой сложности, а также чистый код и постоянное тестирование выведут Ваш продукт на новый бизнес-уровень, а своевременная техподдержка обеспечит стабильность и уверенность в дальнейшем развитии.">
   <meta name="author" content="">
+
+  <meta property="og:url" content="https://golovkin.cc" />
+  <meta property="og:title" content="Сергей Головкин" />
+  <meta property="og:description" content="Профессиональное проектирование, интеграция, разработка и внедрение Вашего проекта любой сложности, а также чистый код и постоянное тестирование выведут Ваш продукт на новый бизнес-уровень, а своевременная техподдержка обеспечит стабильность и уверенность в дальнейшем развитии." />
+  <meta property="og:image" content="<%= image_url 'bg/surfwave_1920.jpg' %>" />
 
   <title>Сергей Головкин</title>
 
