--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
 
   <!-- Google Tag Manager trigger for Turbolinks -->
   <script type="text/javascript">
-    $(document).on('page:change', function(){
+    $(document).on('turbolinks:load', function(){
       var url = window.location.href;
 
       dataLayer.push({
