--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,8 +8,8 @@
     <div class="hero-text">
 
       <h1 class="mh-line-size-1 font-alt m-b-50">
-        <span class="fa mh-line-size-1 font-alt bounceInLeft animated a-d-03">Сергей</span> <span class="fa mh-line-size-1 font-alt bounceInRight animated a-d-06">Головкин</span></h1>
-      <h5 class="mh-line-size-4 font-alt m-b-50 fa fadeIn animated a-d-09">профессиональный разработчик</h5>
+        <span class="fa mh-line-size-1 font-alt bounceInLeft animated a-d-03"><%= t 'first_name' %></span> <span class="fa mh-line-size-1 font-alt bounceInRight animated a-d-06"><%= t 'last_name' %></span></h1>
+      <h5 class="mh-line-size-4 font-alt m-b-50 fa fadeIn animated a-d-09"><%= t 'index.professional' %> <%= t 'index.developer' %></h5>
       <h5 class="mh-line-size-1 font-alt">
         <%= link_to 'mailto:me@golovkin.cc' do %>
             <i class="fa fa-envelope bounceIn animated a-d-12 l-s-n"></i>
