--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -7,8 +7,8 @@
   <div class="hero-caption">
     <div class="hero-text">
 
-      <h1 class="mh-line-size-1 font-alt m-b-50"><span class="mh-line-size-1 font-alt fa fadeIn animated a-d-05">О себе</span></h1>
-      <h5 class="mh-line-size-4 font-alt m-b-50 fa fadeIn animated a-d-08">Добро пожаловать за грани возможного</h5>
+      <h1 class="mh-line-size-1 font-alt m-b-50"><span class="mh-line-size-1 font-alt fa fadeIn animated a-d-05"><%= t 'about.index.title' %></span></h1>
+      <h5 class="mh-line-size-4 font-alt m-b-50 fa fadeIn animated a-d-08"><%= t 'about.index.description' %></h5>
 
       <h6 class="mh-line-size-1 font-alt m-t-100">
         <%= link_to '#about', class: 'section-scroll' do %>
@@ -33,12 +33,10 @@
       <!-- ABOUT STUDIO  -->
       <div class="col-sm-4 first-in-row">
         <div class="content-box pull-left m-t-0">
-          <h4 class="font-alt m-t-0 m-b-20">О себе</h4>
+          <h4 class="font-alt m-t-0 m-b-20"><%= t 'about.index.presentation.about.title' %></h4>
 
           <%= image_tag 'me.jpg', width: '100', class: 'img-rounded fa pull-left d-block' %>
-          <p><strong>Привет</strong> <i class="fa fa-smile-o"></i> Меня зовут <strong>Сергей</strong> и я <strong>программист</strong>,
-            разработчик с более чем десятилетним стажем, обширным опытом решения задач любой сложности.
-            Помогу Вашему проекту стать лучше. <i class="fa fa-thumbs-o-up"></i></p>
+          <p><%= t 'about.index.presentation.about.description_html' %></p>
         </div>
       </div>
       <!-- /ABOUT STUDIO  -->
@@ -46,11 +44,8 @@
       <!-- WHAT WE DO -->
       <div class="col-sm-4">
 
-        <h4 class="font-alt m-t-0 m-b-20">Услуги</h4>
-        <p>Профессиональное <strong>проектирование</strong>, <strong>интеграция</strong>,
-          <strong>разработка</strong> и <strong>внедрение</strong> Вашего проекта любой сложности,
-          а также <strong>чистый код</strong> и постоянное <strong>тестирование</strong> выведут Ваш продукт на новый бизнес-уровень,
-          а своевременная <strong>техподдержка</strong> обеспечит стабильность и уверенность в дальнейшем развитии.</p>
+        <h4 class="font-alt m-t-0 m-b-20"><%= t 'about.index.presentation.services.title' %></h4>
+        <p><%= t 'about.index.presentation.services.description_html' %></p>
 
       </div>
       <!-- /WHAT WE DO -->
@@ -94,7 +89,7 @@
     <div class="row m-t-70">
       <div class="col-sm-10 col-sm-offset-1 text-center">
 
-        <div class="mh-line-size-4 module-subtitle font-serif"><blockquote>Сделаем интернет чуточку лучше, вместе<i class="fa fa-smile-o"></i></blockquote></div>
+        <div class="mh-line-size-4 module-subtitle font-serif"><blockquote><%= t 'about.index.annotate' %><i class="fa fa-smile-o"></i></blockquote></div>
 
       </div>
     </div>
@@ -125,7 +120,7 @@
         <div class="counter-item">
           <div class="counter-title font-alt">
             <h5 class="font-alt counter-number" data-number="7259"><span></span></h5>
-            <i class="fa fa-coffee"></i> кофе
+            <i class="fa fa-coffee"></i> <%= t 'about.index.banner.coffee' %>
           </div>
         </div>
       </div>
@@ -136,7 +131,7 @@
         <div class="counter-item">
           <div class="counter-title font-alt">
             <h5 class="font-alt counter-number" data-number="112"><span></span></h5>
-            <i class="fa fa-user"></i> Клиентов
+            <i class="fa fa-user"></i> <%= t 'about.index.banner.clients' %>
           </div>
         </div>
       </div>
@@ -147,7 +142,7 @@
         <div class="counter-item">
           <div class="counter-title font-alt">
             <h5 class="font-alt counter-number" data-number="75">><span></span>m</h5>
-            <i class="fa fa-code"></i> строк кода
+            <i class="fa fa-code"></i> <%= t 'about.index.banner.code' %>
           </div>
         </div>
       </div>
@@ -158,7 +153,7 @@
         <div class="counter-item">
           <div class="counter-title font-alt">
             <h5 class="counter-number" data-number="98"><span></span>%</h5>
-            <i class="fa fa-smile-o"></i> Счастья
+            <i class="fa fa-smile-o"></i> <%= t 'about.index.banner.happy' %>
           </div>
         </div>
       </div>
@@ -183,7 +178,7 @@
     <!-- MODULE TITLE -->
     <div class="row">
       <div class="col-sm-6 col-sm-offset-3">
-        <h2 class="module-title font-alt">Услуги</h2>
+        <h2 class="module-title font-alt"><%= t 'about.index.services.title' %></h2>
       </div>
     </div>
     <!-- /MODULE TITLE -->
@@ -196,11 +191,8 @@
           <div class="content-box-icon">
             <i class="ion-settings"></i>
           </div>
-          <h5 class="content-box-title font-alt">Проектирование</h5>
-          <div class="content-box-text">
-            Проектирование исключительно под Ваши требования.
-            С учетом индивидуальных пожеланий и предпочтений, основываясь на многолетнем опыте внедрения.
-          </div>
+          <h5 class="content-box-title font-alt"><%= t 'about.index.services.planning.title' %></h5>
+          <div class="content-box-text"><%= t 'about.index.services.planning.description' %></div>
         </div>
       </div>
       <!-- /CONTENT BOX -->
@@ -211,11 +203,8 @@
           <div class="content-box-icon">
             <i class="ion-android-settings"></i>
           </div>
-          <h5 class="content-box-title font-alt">Интеграция</h5>
-          <div class="content-box-text">
-            Интеграция с любыми системами, любой сложности (SAP, Oracle, MS SQL и т.д.)
-            как по предоставленной Вами, так и самостоятельно разработанной схеме взаимодействия.
-          </div>
+          <h5 class="content-box-title font-alt"><%= t 'about.index.services.integration.title' %></h5>
+          <div class="content-box-text"><%= t 'about.index.services.integration.description' %></div>
         </div>
       </div>
       <!-- /CONTENT BOX -->
@@ -226,11 +215,8 @@
           <div class="content-box-icon">
             <i class="ion-android-laptop"></i>
           </div>
-          <h5 class="content-box-title font-alt">Разработка</h5>
-          <div class="content-box-text">
-            Быстрая и качественная разработка продукта, с учетом последних тенденций выбраной Вами платформы.
-            Тестирование и контроль на всех этапах разработки.
-          </div>
+          <h5 class="content-box-title font-alt"><%= t 'about.index.services.development.title' %></h5>
+          <div class="content-box-text"><%= t 'about.index.services.development.description' %></div>
         </div>
       </div>
       <!-- /CONTENT BOX -->
@@ -241,11 +227,8 @@
           <div class="content-box-icon">
             <i class="ion-android-bulb"></i>
           </div>
-          <h5 class="content-box-title font-alt">Модули & плагины</h5>
-          <div class="content-box-text">
-            Разработка индивидуальных модулей для внедрения в проекты Ваших партнеров.
-            А также вынесения бизнес-логики в отдельные плагины для удобства ведения Вашего проекта.
-          </div>
+          <h5 class="content-box-title font-alt"><%= t 'about.index.services.development.title' %></h5>
+          <div class="content-box-text"><%= t 'about.index.services.development.description' %></div>
         </div>
       </div>
       <!-- /CONTENT BOX -->
@@ -256,11 +239,8 @@
           <div class="content-box-icon">
             <i class="ion-android-alarm-clock"></i>
           </div>
-          <h5 class="content-box-title font-alt">Оптимизация</h5>
-          <div class="content-box-text">
-            Анализ, рефакторинг кода и оптимизация бизнес-логики Вашего проекта
-            для максимального ускорения всех систем и механизмов Вашего продукта.
-          </div>
+          <h5 class="content-box-title font-alt"><%= t 'about.index.services.optimization.title' %></h5>
+          <div class="content-box-text"><%= t 'about.index.services.optimization.description' %></div>
         </div>
       </div>
       <!-- /CONTENT BOX -->
@@ -271,11 +251,8 @@
           <div class="content-box-icon">
             <i class="ion-android-happy"></i>
           </div>
-          <h5 class="content-box-title font-alt">Техподдержка</h5>
-          <div class="content-box-text">
-            Сопровождение Вашего проекта на всех этапах запуска.
-            Своевременная профессиональная техническая поддержка и консультация по работе Вашего продукта.
-          </div>
+          <h5 class="content-box-title font-alt"><%= t 'about.index.services.support.title' %></h5>
+          <div class="content-box-text"><%= t 'about.index.services.support.description' %></div>
         </div>
       </div>
       <!-- /CONTENT BOX -->
