Add :en locales + fix :ru locales

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -227,8 +227,8 @@
           <div class="content-box-icon">
             <i class="ion-android-bulb"></i>
           </div>
-          <h5 class="content-box-title font-alt"><%= t 'about.index.services.development.title' %></h5>
-          <div class="content-box-text"><%= t 'about.index.services.development.description' %></div>
+          <h5 class="content-box-title font-alt"><%= t 'about.index.services.plugins.title' %></h5>
+          <div class="content-box-text"><%= t 'about.index.services.plugins.description' %></div>
         </div>
       </div>
       <!-- /CONTENT BOX -->
