Add activeadmin material responsive theme

--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -6,10 +6,11 @@
 //
 // For example, to change the sidebar width:
 // $sidebar-width: 242px;
-
+$am-theme-primary: #009688 !default;
 // Active Admin's got SASS!
 @import "active_admin/mixins";
-@import "active_admin/base";
+//@import "active_admin/base";
+@import "active_material";
 
 // Overriding any non-variable SASS must be done after the fact.
 // For example, to change the default status-tag color:
