Add change language icons

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "font-awesome";
+@import "flag-icon";
 @import "css/ionicons.min";
 @import "css/simpletextrotator";
 @import "css/magnific-popup";
