--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,3 +1,7 @@
+<% set_meta_tags title: t('about.index.title'),
+                 description: "#{t('about.index.description')}! #{t('about.index.annotate')}!",
+                 keywords: "#{t('full_name')}, #{t('about.index.title')}" %>
+
 <!-- HERO -->
 <section id="hero"
          class="module-hero module-parallax module-full-height bg-light-30"
