--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,3 +1,7 @@
+<% set_meta_tags title: t('.meta.title'),
+                 description: "#{t('.body.description')}",
+                 keywords: "#{t('full_name')}, #{t('.meta.title')}" %>
+
 <!-- HERO -->
 <section id="hero"
          class="module-hero module-parallax module-full-height bg-light-30"
