--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,6 @@
+<% set_meta_tags description: t('meta.description'),
+                 keywords: "#{t('full_name')}, #{t('index.professional')}, #{t('index.developer')}" %>
+
 <!-- HERO -->
 <section id="hero"
          class="module-hero module-parallax module-full-height bg-light-30"
