Add blog posts controller, blog menu and page loader on turbolinks

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,14 +42,18 @@
 
   <!-- Google Tag Manager trigger for Turbolinks -->
   <script type="text/javascript">
-    $(document).on('page:change', function(){
-      var url = window.location.href;
-
-      dataLayer.push({
-        'event':'pageView',
-        'virtualUrl': url
+      $(document).on('turbolinks:request-start', function(){
+          $('.loader').show();
+          $('.page-loader').show();
       });
-    });
+      $(document).on('turbolinks:load', function(){
+          var url = window.location.href;
+
+          dataLayer.push({
+              'event':'pageView',
+              'virtualUrl': url
+          });
+      });
   </script>
   <!-- End Google Tag Manager trigger for Turbolinks -->
 
@@ -83,6 +87,7 @@
         <ul id="nav" class="m-b-20">
 
           <li><a href="<%= root_path %>" title="<%= t 'menu.main' %>"><%= t 'menu.main' %></a></li>
+          <li><a href="<%= posts_path %>" title="<%= t 'menu.blog' %>"><%= t 'menu.blog' %></a></li>
           <li><a href="<%= about_path %>" title="<%= t 'menu.about' %>"><%= t 'menu.about' %></a></li>
           <li><a href="<%= contacts_path %>" title="<%= t 'menu.contacts' %>"><%= t 'menu.contacts' %></a></li>
 
@@ -144,6 +149,7 @@
 
         <ul class="extra-navbar nav navbar-nav navbar-right">
           <li><a href="<%= root_path %>" title="<%= t 'menu.main' %>"><%= t 'menu.main' %></a></li>
+          <li><a href="<%= posts_path %>" title="<%= t 'menu.blog' %>"><%= t 'menu.blog' %></a></li>
           <li><a href="<%= about_path %>" title="<%= t 'menu.about' %>"><%= t 'menu.about' %></a></li>
           <li><a href="<%= contacts_path %>" title="<%= t 'menu.contacts' %>"><%= t 'menu.contacts' %></a></li>
         </ul>
