--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,8 @@
   <meta name="msapplication-TileImage" content="<%= image_path 'favicon/ms-icon-144x144.png' %>">
   <meta name="theme-color" content="#ffffff">
 
+  <%= favicon_link_tag '/favicon.ico' %>
+
   <% #<script src="//maps.google.com/maps/api/js?sensor=true"></script> %>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
