Remove blog from menu

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -89,7 +89,7 @@
         <ul id="nav" class="m-b-20">
 
           <li><a href="<%= root_path %>" title="<%= t 'menu.main' %>"><%= t 'menu.main' %></a></li>
-          <li><a href="<%= posts_path %>" title="<%= t 'menu.blog' %>"><%= t 'menu.blog' %></a></li>
+          <!--<li><a href="<%= posts_path %>" title="<%= t 'menu.blog' %>"><%= t 'menu.blog' %></a></li>-->
           <li><a href="<%= about_path %>" title="<%= t 'menu.about' %>"><%= t 'menu.about' %></a></li>
           <li><a href="<%= contacts_path %>" title="<%= t 'menu.contacts' %>"><%= t 'menu.contacts' %></a></li>
 
@@ -151,7 +151,7 @@
 
         <ul class="extra-navbar nav navbar-nav navbar-right">
           <li><a href="<%= root_path %>" title="<%= t 'menu.main' %>"><%= t 'menu.main' %></a></li>
-          <li><a href="<%= posts_path %>" title="<%= t 'menu.blog' %>"><%= t 'menu.blog' %></a></li>
+          <!--<li><a href="<%= posts_path %>" title="<%= t 'menu.blog' %>"><%= t 'menu.blog' %></a></li>-->
           <li><a href="<%= about_path %>" title="<%= t 'menu.about' %>"><%= t 'menu.about' %></a></li>
           <li><a href="<%= contacts_path %>" title="<%= t 'menu.contacts' %>"><%= t 'menu.contacts' %></a></li>
         </ul>
